# chip8

./: CMakeLists.txt  README.md
.cache/clangd/index/: aux.c.03A3C27EE708FD48.idx  aux.h.7C4B9A8CF8CB788D.idx  chip8.c.EC26E4268C144675.idx  chip8.h.0F9E01D18949CD8D.idx  main.c.C8EC6E77DAD5C171.idx
include/: aux.h  chip8.h
src/: aux.c  chip8.c  main.c
